Updated icons for menuitems